Fri Sep 19 19:24:56 2008  Lee Noar  <leenoar@sky.com>

	Add support for per client dynamic loader environment:

	* som_runcom.c(read_ld_env): New function to find the
	environment of the dynamic loader for the current client.
	(setup_env_array): Use read_ld_env().
	* som_utils.c, som_utils.h: New files for miscellaneous utility
	functions (wildcmp).
	* Makefile.am: Add som_utils.c.
	* riscos/soloader/dist/!SharedLibs/docs/!ReadMe: Update docs.
	* riscos/dist/!GCC/docs/SharedLibs/!ReadMe: Likewise.

Mon Aug 25 19:23:22 PDT 2008  Peter Naulls  <peter@chocky.org>

	* som_init.c: Better name for dynamic area. 

Sun Aug 10 19:48:45 2008  Lee Noar  <leenoar@sky.com>

	* som_command.c(command_status): Produce a more compact and easier
	to read output for *SOMStatus command. Also allow libraries and
	clients to be listed separately.
	* somanager.cmhg: Update *SOMStatus syntax.
	* riscos/soloader/dist/!SharedLibs/docs/!ReadMe: Update docs.
	* riscos/dist/!GCC/docs/SharedLibs/!ReadMe: Likewise.

Sat Aug 09 13:32:29 2008  Lee Noar  <leenoar@sky.com>

	* som_elf.c(elffile_open): It's possible for the text segment not
	to be a multiple of 4 in size which can create a 'hole' between
	segments due to realignment by the static linker. This can cause
	two problems; 1) The memory size calculation doesn't take the hole
	into account meaning the segments overflow and 2) The free memory
	pointer is not word aligned.
	Rather than adding memory size of segments together, track upper
	limit of memory segments as an offset from the start of the object.

	* som_runcom.c(command_run): To be on the safe side, make sure we
	start with a word aligned free memory pointer.

Wed Jul 09 21:55:34 2008  Lee Noar  <leenoar@sky.com>

	* som_utilswis.c(som_iterate_objects): When the last/first object
	has been returned, make sure r1 (internal handle) is set to 0 on
	exit.

Mon Mar 10 17:17:26 2008  Lee Noar  <leenoar@sky.com>

	* som_runcom.c: Change occurrence of DSOLib: to SharedLibs: as part